--- a/style.css
+++ b/style.css
@@ -11,4 +11,25 @@
 a {
     text-decoration: none;
     color: #1C1C1C;
+} 
+
+a:hover {
+    color: #1C1C1C;
+}
+
+.box1 {
+    display: flex;
+    align-items: space-between;
+    justify-items: center;
+}
+
+.mycard {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    padding: 1em;
+}
+
+.mycard:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
